--- a/QDA.ipynb
+++ b/QDA.ipynb
@@ -97,22 +97,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "for speed 0 and population densisty of 1000 Aera would safe\n"
+      "for speed 0 and population densisty of 1000 Area would safe\n"
      ]
     }
    ],
    "source": [
     "if(prediction==2):\n",
-    "    print(\"for speed limit of \"+ str(speedLimit)+\" and population densisty of \"+ str(PopulationDensity)+\"Aera would not safe\")\n",
+    "    print(\"for speed limit of \"+ str(speedLimit)+\" and population densisty of \"+ str(PopulationDensity)+\"Area would not safe\")\n",
     "else:\n",
-    "        print(\"for speed \"+ str(speedLimit)+\" and population densisty of \"+ str(PopulationDensity)+\" Aera would safe\")"
+    "        print(\"for speed \"+ str(speedLimit)+\" and population densisty of \"+ str(PopulationDensity)+\" Area would safe\")"
    ]
   },
   {
